tests/ui/lexer/string_escapes_crlf.stderr
error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"\
   |                        ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: cannot skip multiple lines with `\`
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | 
   | ^
   |

error: cannot skip multiple lines with `\`
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | 
   | ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"\
   |                        ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"\
   |                         ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | ...
   | ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | 
   | ^
   |

error: unescaped newline
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | string constant s = "
   |                      ^
   |

error: unescaped newline
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | string constant s = unicode"
   |                             ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"
   |                        ^
   |

error: invalid hex digit
  --> ROOT/tests/ui/lexer/string_escapes_crlf.sol:LL:CC
   |
LL | bytes constant s = hex"
   |                        ^
   |

error: aborting due to 14 previous errors

